--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/validator": "^13.7.1",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.8",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
