--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-uid": "^2.3.1",
+    "react-uuid": "^1.0.2",
     "typescript": "^4.6.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
